# wagtail-bucketav

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  manage.py.example  pyproject.toml  pytest.ini
.github/workflows/: publish.yaml  test-bleeding-edges.yml  test.yml
django_bucketav/: apps.py  models.py  settings.py  urls.py  utils.py  views.py
django_bucketav/testapp/: models.py  settings.py  urls.py
django_bucketav/tests/: conftest.py  test_models.py  test_utils.py  test_webhook.py
wagtail_bucketav/: __init__.py  apps.py  models.py  settings.py  signal_handlers.py  signals.py  urls.py  utils.py  views.py  wagtail_hooks.py
wagtail_bucketav/testapp/: models.py  settings.py  urls.py
wagtail_bucketav/testapp/migrations/: 0001_initial.py
wagtail_bucketav/tests/: conftest.py  test_example.py  test_models.py  test_utils.py  test_webhook.py
