[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "django-bucketav"
authors = [
    {name = "Jake Howard", email = "jake.howard@torchbox.com"},
    {name = "Nick Morton", email = "nick.moreton@torchbox.com"},
    {name = "Joshua Munn", email = "joshua.munn@torchbox.com"},
    {name = "Andy Babic", email = "andy.babic@torchbox.com"}
]
description = ""
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "Django>=3.2,<5.1",
    "django-sns-view>=0.1.2,<0.2.0"
]

[project.optional-dependencies]
lint = [
    "black==22.6.0",
    "isort==5.11.5",
    "flake8==3.9.2",
    "mypy==1.8.0",
    "typing-extensions==4.9.0",
    "pre-commit==3.5.0",
]
test = [
    "pytest-cov==3.0.0",
    "pytest-django==4.5.2",
    "pytest==7.1.2",
    "time-machine==2.13.0",
    "dj-inmemorystorage==2.1.0"
]
documentation = [
    "mkdocs==1.1.2",
    "mkdocs-material==6.2.8",
    "mkdocs-mermaid2-plugin==0.5.1",
    "mkdocstrings==0.14.0",
    "mkdocs-include-markdown-plugin==2.8.0",
    "pygments==2.11.2"
]

[project.urls]
Home = "https://github.com/torchbox/django-bucketav"
Source = "https://github.com/torchbox/django-bucketav"

[tool.flit.module]
name = "django_bucketav"

[tool.flit.sdist]
exclude = [
    "django_bucketav/static_src",
    "django_bucketav/tests",
    "django_bucketav/testapp",
    "django_bucketav/static/.gitignore",
    "docs",
    "*.js",
    "*.json",
    "*.ini",
    "*.yml",
    ".editorconfig"
]
include = [
    "django_bucketav/static"
]

[tool.isort]
known_first_party = "django_bucketav"
profile = "black"
skip = "migrations,node_modules,venv"
sections = "STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"
default_section = "THIRDPARTY"
multi_line_output = 3
include_trailing_comma = "True"
force_grid_wrap = 0
use_parentheses = "True"

[tool.black]
line_length = 88
exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | __pycache__
    | _build
    | build
    | dist
    | docs
    | venv
    | node_modules
  )/
)
'''

[tool.mypy]
# @link https://mypy.readthedocs.io/en/stable/config_file.html#using-a-pyproject-toml
python_version = "3.8"
exclude = [
    '^django_bucketav/testapp/.*$',
]
[[tool.mypy.overrides]]
module = [
    "django.*",
    "django_sns_view.*",
]
ignore_missing_imports = true
